Fix popout window device background color in dark mode

--- a/global_styles_dark.css
+++ b/global_styles_dark.css
@@ -32,7 +32,6 @@ body.popout {
 	width: 100%;
 }
 .devicecommandsleft {
-	background-color: white;
 	display: flex;
 	flex-direction: column;
 	width: 100%;
